# fluidsf

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  environment.yaml  ex1.html  ex1.ipynb  ex2.html  ex2.ipynb  ex_1d.html  ex_2d.html  ex_2d_bootstrap.html  ex_3d.html  ex_cascade.html  ex_mitgcm.html  examples.html  fluidsf.html  genindex.html  index.html  installation.html  langmuir_3d_ex.html  maps_2d_ex.html  modules.html  objects.inv  oceans_sf.html  oceans_sf.toml  overview.html  py-modindex.html  pyproject.toml  qs.html  qs.ipynb  quickstart.html  search.html  searchindex.js  sfs.html  supported_data.html  swot_ex.html  (+2 more)
.doctrees/: environment.pickle  ex1.doctree  ex2.doctree  ex_1d.doctree  ex_2d.doctree  ex_2d_bootstrap.doctree  ex_3d.doctree  ex_cascade.doctree  ex_mitgcm.doctree  examples.doctree  fluidsf.doctree  index.doctree  installation.doctree  langmuir_3d_ex.doctree  maps_2d_ex.doctree  modules.doctree  oceans_sf.doctree  overview.doctree  qs.doctree  quickstart.doctree  sfs.doctree  supported_data.doctree  swot_ex.doctree  terms.doctree
.doctrees/nbsphinx/: ex2.ipynb  ex_2d.ipynb  ex_2d_bootstrap.ipynb  ex_cascade.ipynb  langmuir_3d_ex.ipynb  maps_2d_ex.ipynb  swot_ex.ipynb
.github/: codecov.yml
.github/workflows/: ci.yml  draft-pdf.yml  pre-commit.yml  publish-to-test-pypi.yml  sphinx.yml
_sources/: ex1.ipynb.txt  ex2.ipynb.txt  ex_cascade.ipynb.txt  examples.rst.txt  index.rst.txt  installation.rst.txt  maps_2d_ex.ipynb.txt  modules.rst.txt  overview.rst.txt  qs.ipynb.txt  sfs.rst.txt
docs/: Makefile  conf.py  ex1.html  examples.html  genindex.html  modules.html  objects.inv  oceans_sf.html  overview.html  requirements.txt  search.html  searchindex.js
docs/_sources/: modules.rst.txt
docs/doctrees/: environment.pickle  ex1.doctree  examples.doctree  index.doctree  installation.doctree  modules.doctree  oceans_sf.doctree  overview.doctree
docs/html/: index.html  installation.html  py-modindex.html
docs/source/: conf.py  ex1.ipynb  ex2.ipynb  ex_1d.ipynb  ex_2d.ipynb  ex_2d_bootstrap.ipynb  ex_3d.ipynb  ex_cascade.ipynb  ex_latlon.ipynb  ex_mitgcm.ipynb  examples.rst  index.rst  (+12 more)
examples/: 2D_Map_SF_Example.ipynb  2D_Polar_SF_Example.ipynb  ex1.ipynb  ex_1d.ipynb  ex_2d.ipynb  ex_2d_bootstrap.ipynb  ex_3d.ipynb  ex_cascade.ipynb  ex_mitgcm.ipynb  maps_2d_ex.ipynb  qs.ipynb
fluidsf/: __init__.py  bin_data.py  calculate_2D_SF_maps.py  calculate_advection.py  calculate_advection_3d.py  calculate_separation_distances.py  calculate_separation_distances_3d.py  calculate_sf_maps_2d.py  calculate_structure_function.py  calculate_structure_function_1d.py  calculate_structure_function_2d.py  calculate_structure_function_3d.py  generate_2D_SF_maps.py  generate_sf_maps_2d.py  generate_structure_functions.py  generate_structure_functions_1d.py  generate_structure_functions_3d.py  shift_array1d.py  shift_array2d.py  shift_array_1d.py  shift_array_2d.py  shift_array_3d.py  shift_array_xy.py  xy_shift_array.py
oceans-sf/: calculate_advection.py  traditional_sf.py
oceans_sf/: __init__.py  __version.py  advection_scalar.py  advection_sf.py  advection_velocity.py  bin_data.py  calculate_2D_SF_maps.py  calculate_advection.py  calculate_advection_3d.py  calculate_advection_scalar_structure_function.py  calculate_advection_velocity_structure_function.py  calculate_scalar_advection.py  calculate_separation_distances.py  calculate_separation_distances_3d.py  calculate_structure_function.py  calculate_structure_function_1d.py  calculate_structure_function_3d.py  calculate_structure_function_advection.py  calculate_velocity_advection.py  generate_2D_SF_maps.py  generate_structure_functions.py  generate_structure_functions_1d.py  generate_structure_functions_3d.py  shift_array1d.py  shift_array2d.py  shift_array3d.py  shift_array_1d.py  shift_array_2d.py  shift_array_3d.py  traditional_scalar.py  traditional_velocity.py  xy_shift_array.py
paper/: paper.bib  paper.md
tests/: __init__.py  test_advection_velocity.py  test_bin_data.py  test_calculate_advection.py  test_calculate_advection_2d.py  test_calculate_advection_3d.py  test_calculate_advection_velocity_structure_function.py  test_calculate_separation_distances.py  test_calculate_separation_distances_3d.py  test_calculate_sf_maps_2d.py  test_calculate_structure_function.py  test_calculate_structure_function_1d.py  test_calculate_structure_function_2d.py  test_calculate_structure_function_3d.py  test_calculate_velocity_advection.py  test_generate_sf_maps_2d.py  test_generate_structure_functions.py  test_generate_structure_functions_1d.py  test_generate_structure_functions_2d.py  test_generate_structure_functions_3d.py  test_shift_array1d.py  test_shift_array2d.py  test_shift_array_1d.py  test_shift_array_2d.py  test_shift_array_3d.py  test_shift_array_xy.py
(+36 files in other folders)
