[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oceans_sf"
version = "0.0.1"
authors = [
    { name="Cassidy Wagner", email="wagncass@oregonstate.edu"},
]
description = "Calculate structure functions from oceanographic data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "pytest>=7,<8",
]

[project.urls]
"Homepage" = "https://github.com/cassidymwagner/oceans_sf"
"Bug Tracker" = "https://github.com/cassidymwagner/oceans_sf/issues"