[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fluidsf"
dynamic = ["version"]
authors = [{ name = "Cassidy Wagner", email = "cassidymwagner@gmail.com" }]
description = "Calculate structure functions from fluid data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy>=1,<3", "pandas>=1.5.3", "geopy>=2"]

[project.optional-dependencies]
test = ["pytest>=7,<8"]

[project.urls]
"Homepage" = "https://github.com/cassidymwagner/fluidsf"
"Bug Tracker" = "https://github.com/cassidymwagner/fluidsf/issues"

# tools
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

# https://github.com/charliermarsh/ruff
[tool.ruff]
line-length = 88
target-version = "py311"
extend-select = [
    "E",      # style errors
    "F",      # flakes
    "D",      # pydocstyle
    "I001",   # isort
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "A001",   # flake8-builtins
    "RUF",    # ruff-specific rules
    "RUF100", # Unused noqa directive
]
extend-ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D103", # Missing docstring in public function
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D205", # 1 blank line required between summary line and description
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D413", # Missing blank line after last section
    "D416", # Section name should end with a colon
    "N806", # Variable in function should be lowercase

]

# [tool.hatch.version]
# path = "fluidsf/__version.py"

[tool.setuptools.dynamic]
version = { attr = "fluidsf.__version__" }
